--- a/pages/MOLLER/MOLLER.mdx
+++ b/pages/MOLLER/MOLLER.mdx
@@ -6,24 +6,34 @@ import Image from 'next/image'
 
 # MOLLER - Measurment of a Lepton-Lepton Electroweak Reaction 
 <small style={{ fontSize: "0.8em", color: "gray" }}>
- ~10 min read
+ ~15 min
 </small>
 
-MOLLER is a cutting-edge experiment designed to study the electroweak interaction of particles, specifically electrons.
-MOLLER will run at the [Jefferson National Laboratory](https://www.jlab.org/). Its purpose is to measure the parity-violating 
-asymmetry of the lepton-lepton electroweak reaction. 
+The purpose of this page is to introduce the reader to the basic concepts of the MOLLER experiment. No prior knowledge is asssumed.
+We will start with a brief summary, then describe the lepton-lepton electroweak reaction, and move on to the concepts of parity and parity violation. 
+We will then discuss Cherenkov radiation and Cherenkov detectors. Finally, we will cover the MOLLER experimental design.
 
-This page will briefly overview the concepts needed to understand the experiment's basic principles. The topics highlighted in the 
-videos and text below are the following:
-{/* Make an unorderd list */}
+A list of the topics covered on this page is:
 
-* Lepton-lepton Electroweak reaction
+* Lepton-lepton electroweak reaction
 * Parity
 * Parity Violating Asymmetry
 * Cherenkov Radiation
 * Cherenkov Detectors
 * MOLLER design
 
+## MOLLER Summary
+
+MOLLER is a cutting-edge experiment that studies the electroweak reaction (mix of electromagnetic and weak-nuclear) between leptons, 
+specifically electrons. To measure these interactions, MOLLER uses detectors that capture Cherenkov radiation which is emitted by the 
+electrons. By carefully analyzing the small changes in the intensity of this radiation we will be able to calculate a quantity called
+the **weak mixing angle**.
+
+When we say a small change we mean small. We're talking about a difference that is so small, it's like finding a 
+few extra grains of sand on a beach, the change in intensity will be just a few parts in a billion.
+
+This page will introduce you to the basic concepts of the MOLLER experiment. The next section will describe the lepton-lepton 
+electroweak reaction.
 
 ## What is the Lepton-Lepton Electroweak Reaction?
 <small style={{ fontSize: "0.8em", color: "gray" }}>
@@ -46,15 +56,16 @@ The video below describes the Lepton-Lepton Electroweak reaction.
 So you can see that the lepton-lepton electroweak reaction is a reaction between two leptons. In MOLLER it will be two electrons.
 When these electrons interact, there could be an **electromagnetic** interaction \(where they exchange a photon\) or a **weak**
 interaction \(where they exchange a Z^0 boson\). The mixing of these interactions is why it is called the **electroweak** reaction. 
-And MOLLER's measurment of the parity-violating asymmetry will allow us to derive a quantity called the **weak mixing angle**.
+And MOLLER's measurment of the parity-violating asymmetry will allow us to derive a quantity called the [**weak mixing angle**](https://en.wikipedia.org/wiki/Weinberg_angle),
+also called the Weinberg angle.
 
 Its actually not quite that simple. If your interested in learning more about electroweak theory, 
 you can start by reading here [Electroweak](https://en.wikipedia.org/wiki/Electroweak_interaction). And 
 an excelent introductory book is [Introduction to elementary particle physics](https://www.amazon.com/Introduction-Elementary-Particles-David-Griffiths/dp/3527406018) 
 By David Griffiths.
 
-Ok, so know we know what is meant by "Lepton-lepton" and "Electroweak".
-But MOLLER will be a measurment of the **Parity Violating Asymmetry** in the lepton-lepton electroweak reaction. So, what is parity? 
+Ok, so know we know what is meant by '*Lepton-lepton*' and '*Electroweak.*'
+But MOLLER will measure the **Parity Violating Asymmetry** in the lepton-lepton electroweak reaction. So, what is parity? 
 and what is parity violation?
 
 <section id="parity">
@@ -66,7 +77,8 @@ and what is parity violation?
 
 Parity is a concept in physics that refers to the **spatial inversion** of a physical system. This means system remains the same when 
 its spatial coordinates are inverted. Then we say that the system has **parity symmetry**. However, the weak force violates this symmetry, 
-which means that some processes involving the weak force do not look the same when their spatial coordinates are inverted.
+which means that some processes involving the weak force do not look the same when their spatial coordinates are inverted. What does that 
+really mean?
 
 The video below describes the concept of parity and parity violation.
 
@@ -91,7 +103,7 @@ We can do this by using Cherenkov radiation.
 
 ## Cherenkov Radiation and Cherenkov Detectors
 <small style={{ fontSize: "0.8em", color: "gray" }}>
-  Covered in this section: Cherenkov Radiation, Cherenkov Detectors, DIRC, PMTs
+  Covered in this section: Cherenkov Radiation, Cherenkov Detectors, PMTs
 </small>
 
 ---
@@ -121,8 +133,6 @@ It's like a sonic boom, but for light.
 <br></br>
 <br></br>
 
-
-
 This video below describes Cherenkov radiation.
 
 <br></br>
@@ -145,16 +155,15 @@ If you're curious to learn more about Cherenkov radiation, you can start by chec
 <small style={{ fontSize: "0.8em", color: "gray" }}>
   Covered in this section: Cherenkov Detectors, total internal reflection, PMTs
 </small>
-Alright, so that's what Cherenkov radiation is. But what does this have to do with the MOLLER experiment?
+Alright, so that's what Cherenkov radiation is. But what does this have to do with the MOLLER?
 
-MOLLER uses detectors that are sensitive to Cherenkov radiation. When electrons from MOLLER's electron beam scatter off of target electrons 
-and travel through the Cherenkov detectors and they emit Cherenkov radiation. By analyzing the patterns of Cherenkov radiation intensity 
-we can derive the value of the **weak mixing angle**.
+MOLLER is equipped with detectors that are sensitive to Cherenkov radiation. As the beam's electrons become 
+scattered, they pass through these Cherenkov detectors, all the while emitting Cherenkov radiation. By analyzing 
+the patterns of Cherenkov radiation intensity we can derive the value of the weak mixing angle.
 
-To do this, MOLLER uses Cherenkov detectors, called thin quartz detectors. These detectors are designed to pick up all or most 
-of the Cherenkov radiation emitted by charged particles passing through them. They do this because of a physical feture called 
-**total internal reflection**. The radition is then captured by photomultiplier tubes (**PMTs**), and recorded by the experiment's 
-data acquisition system.
+MOLLER's main detectors are called thin quartz detectors. They are designed to pick up all or most 
+of the Cherenkov radiation emitted by charged particles passing through them. They do this because of a physical feature called 
+**total internal reflection**. The radition is then captured by photomultiplier tubes (**PMTs**), and recorded by a data acquisition system.
 
 The video below discusses how these types of Cherenkov detectors work.
 
@@ -211,31 +220,9 @@ Key components of the experiment include a **Beam**, a **hydrogen target**, a **
 
 ### The Beam
 
-The beam in the MOLLER experiment is a stream of high-energy electrons generated by a particle accelerator. These electrons are 
+The beam in the MOLLER experiment is a stream of 11 GeV electrons generated by a particle accelerator. These electrons are 
 "spun" so that they have a specific direction, or polarization. During the experiment, the spin direction is rapidly switched back and 
 forth (a process called helicity reversal). This beam is aimed at a hydrogen target.
-
-
-
-<div align = "center">
-  <table>
-    <tr>
-      <td style={{ padding: "20px 20px" }}>
-        ![](/images/sBoom_jet.png)
-      </td>
-    </tr>
-    <tr>
-      <td style={{ textAlign: "center", maxWidth: "250px"  }}>
-        Image of the Beam. Which is generated via photoemission on a GaAs photocathode using circularly polarized laser light. 
-      </td>
-    </tr>
-  </table>
-</div>
-
-<br></br>
-<br></br>
-
----
 
 ### The Target
 
@@ -267,7 +254,9 @@ Next is the 1.25 m **liquid hydrogen target**, where the beam electrons interact
 ### The Spectrometer
 
 Following the target is the **spectrometer** system, consisting of resistive **toroidal magnets** with a 7-fold azimuthal symmetry, 
-which separates and focuses the scattered electrons into 7 different channels.
+which separates and focuses the scattered electrons into 7 different channels. This helps to optimize the measurment by blocking one 
+the scattered electrons and excepting the other. As the electroweak reaction always scatters two electrons (one fromt he beam and 
+one from the target).
 
 <br></br>
 <br></br>
@@ -292,7 +281,8 @@ which separates and focuses the scattered electrons into 7 different channels.
 
 ---
 
-### The Cherenkov Detectors
+### The Detectors
+#### Thin Quartz Detectors
 After the electrons have passed through the spectrometer, they are detected by the **Cherenkov detectors**. The main detectors in the 
 MOLLER experiment are made of thin quartz and arranged in a specific geometry to effectively capture Cherenkov radiation emitted by the 
 scattered electrons. 
@@ -320,6 +310,7 @@ scattered electrons.
 
 ---
 
+#### Additional Detectors
 These detectors are organized into six concentric rings, each divided into at least 21 individual segments around 
 the azimuth. The rings have different radial distances to capture the various scattered electrons. The second-largest ring primarily 
 captures the Moller electron signal, while the second-smallest ring mainly captures the unradiated elastic scattered signal from 
@@ -386,7 +377,7 @@ Dr. McNulty's group is responsible design and construction of the ShowerMax dete
 working on if you were to join the group. The next page has much more detailed information about ShowerMax.
 
 
-So, imagine you're an electron zipping through the MOLLER experiment. You and your fellow electrons are part of an 11 GeV 
+{/* So, imagine you're an electron zipping through the MOLLER experiment. You and your fellow electrons are part of an 11 GeV 
 longitudinally polarized beam, and you're about to interact with a 1.25 m liquid hydrogen target. As you approach the target, 
 you can feel the electromagnetic and weak forces at play, exchanging photons and Z^0 bosons with other electrons you encounter.
 
@@ -407,4 +398,4 @@ physics of electron-electron interactions and the electroweak theory. And who kn
 beyond the Standard Model!
 
 
-That concludes the overveiw of the MOLLER experiment. In the next post we will look at the ShowerMax detector in more detail.
+That concludes the overveiw of the MOLLER experiment. In the next post we will look at the ShowerMax detector in more detail. */}
