finished showermax page

--- a/pages/MOLLER/MOLLER.mdx
+++ b/pages/MOLLER/MOLLER.mdx
@@ -17,7 +17,7 @@ A list of the topics covered on this page is:
 
 * Lepton-lepton electroweak reaction
 * Parity
-* Parity Violating Asymmetry
+* Parity Violating Asymmetry (Apy)
 * Cherenkov Radiation
 * Cherenkov Detectors
 * MOLLER design
@@ -56,7 +56,7 @@ The video below describes the Lepton-Lepton Electroweak reaction.
 So you can see that the lepton-lepton electroweak reaction is a reaction between two leptons. In MOLLER it will be two electrons.
 When these electrons interact, there could be an **electromagnetic** interaction \(where they exchange a photon\) or a **weak**
 interaction \(where they exchange a Z^0 boson\). The mixing of these interactions is why it is called the **electroweak** reaction. 
-And MOLLER's measurment of the parity-violating asymmetry will allow us to derive a quantity called the [**weak mixing angle**](https://en.wikipedia.org/wiki/Weinberg_angle),
+And MOLLER's measurment of the parity-violating asymmetry (Apy) will allow us to derive a quantity called the [**weak mixing angle**](https://en.wikipedia.org/wiki/Weinberg_angle),
 also called the Weinberg angle.
 
 Its actually not quite that simple. If your interested in learning more about electroweak theory, 
@@ -94,11 +94,11 @@ The video below describes the concept of parity and parity violation.
 <br></br>
 
 
-So, in the context of the MOLLER experiment, the parity-violating asymmetry refers to the difference in scattering probabilities of 
+So, in the context of the MOLLER experiment, the Apy refers to the difference in scattering probabilities of 
 the electrons when their spins are flipped. By measuring this asymmetry, the experiment will gain insight into the weak mixing 
 angle, a crucial parameter in the electroweak theory.
 
-This brings us to the question of how do we actually measure the parity-violating asymmetry in the lepton-lepton electroweak reaction? 
+This brings us to the question of how do we actually measure the Apy in the lepton-lepton electroweak reaction? 
 We can do this by using Cherenkov radiation.
 
 ## Cherenkov Radiation and Cherenkov Detectors
@@ -342,7 +342,7 @@ information about the underlying physics in the experiment.
 
 Finally, we have additional detectors including **ShowerMax**, **pion detectors** (acrylic calorimeters), and large and 
 small angle monitors, which help monitor backgrounds and calibrations. Together, these components form a comprehensive experimental 
-setup that allows scientists to measure the parity-violating asymmetry in the lepton-lepton electroweak reaction.
+setup that allows scientists to measure the Apy in the lepton-lepton electroweak reaction.
 
 <br></br>
 <br></br>
@@ -373,7 +373,7 @@ setup that allows scientists to measure the parity-violating asymmetry in the le
 
 ---
 
-Dr. McNulty's group is responsible design and construction of the ShowerMax detector. This is the detector that you would most likely be 
+Dr. McNulty's group is responsible for the design and construction of the ShowerMax detector. This is the detector that you would most likely be 
 working on if you were to join the group. The next page has much more detailed information about ShowerMax.
 
 
